# easy-usb

./: .codecov.yml  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  codecov.yml  rustfmt.toml
.github/: cargo-deny.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/easy-usb-adapter-android/: Cargo.toml
crates/easy-usb-adapter-linux/: Cargo.toml
crates/easy-usb-adapter-mdns/: Cargo.toml
crates/easy-usb-adapter-vci/: Cargo.toml
crates/easy-usb-cli/: Cargo.toml
crates/easy-usb-core/: Cargo.toml
crates/easy-usb-core/src/: lib.rs
crates/easy-usb-core/src/engine/: mod.rs  registry.rs
crates/easy-usb-core/src/port/: discovery.rs  host.rs  ipc.rs  mod.rs  session.rs  types.rs
crates/easy-usb-core/src/port/tests/: mock_discovery.rs  mock_host.rs  mock_ipc.rs  mock_session.rs  mod.rs
crates/easy-usb-core/src/protocol/: codec.rs  constants.rs  device.rs  handshake.rs  mod.rs  server.rs  session.rs  wire.rs
crates/easy-usb-core/tests/: interop-checklist.md  interop.rs
crates/easy-usb-daemon/: Cargo.toml
docker/: Dockerfile.usbipd  docker-compose.yml  entrypoint.sh
