[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]
disallowed_methods = "deny"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
bytes = "1"
byteorder = "1"
anyhow = "1"
thiserror = "2"
windows = "0.62"
nix = "0.31"
jni = "0.22"
mdns-sd = "0.20"
socket2 = "0.5"
async-trait = "0.1"
futures = "0.3"
